add getProduct and Delete docs in the swagger
